Castling and full move validation for every piece

--- a/H_ECK/H_ECK.csproj
+++ b/H_ECK/H_ECK.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BoardElements\Board.cs" />
     <Compile Include="BoardElements\Field.cs" />
     <Compile Include="GameElements\Game.cs" />
+    <Compile Include="GameElements\LongCastling.cs" />
     <Compile Include="GameElements\Move.cs" />
     <Compile Include="GameElements\Player.cs" />
     <Compile Include="GameElements\ShortCastling.cs" />
