--- a/H_ECK/H_ECK.csproj
+++ b/H_ECK/H_ECK.csproj
@@ -35,6 +35,9 @@
   <PropertyGroup>
     <StartupObject>H_ECK.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Blackvariant-Button-Ui-System-Apps-Chess.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -71,6 +74,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Blackvariant-Button-Ui-System-Apps-Chess.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
